2008-12-21  Gustavo J. A. M. Carneiro  <gjc@gnome.org>

	* configure.ac: Missing libgnome/libgnomeui flags, now for the
	autotools part.  Fixes #564525

=== 2.24.1 ===
2008-12-19  Gustavo J. A. M. Carneiro  <gjc@gnome.org>

	* configure.ac, wscript: Version 2.24.1.

	* configure.ac: libtool-2.2 compatibility, patch by "Cygwin Ports
	maintainer" (bug #564550).
	

2008-12-16  Luis Medinas  <lmedinas@gnome.org>

	* gnomeapplet/applet.override:
	* gnomeapplet/appletmodule.c:
	* gnomeapplet/wscript:

	Fix build error with missing libgnome/libgnomeui flags.
	Patch from Lucas Rocha <lucasr@gnome.org> closes bgo #564525

2008-10-18  Gustavo J. A. M. Carneiro  <gjc@gnome.org>

	* tests/common.py: Fix a bug in the import check.

=== 2.24.0 ===
2008-09-21  Gustavo J. A. M. Carneiro  <gjc@gnome.org>

	* configure.ac, wscript: Bump version to 2.24.0.

	* NEWS: Update.

=== 2.23.1 ===
2008-08-31  Gustavo J. A. M. Carneiro  <gjc@gnome.org>

	* configure.ac, wscript: Bump version to 2.23.1.

2008-08-31  Gustavo J. A. M. Carneiro  <gjc@inescporto.pt>

	* totem/plparsermodule.c (_fill_metadata),
	(_totem_metadata_from_gvalue, _totem_metadata_to_gvalue),
	(initplparser): Add convertion functions for the type
	TOTEM_TYPE_PL_PARSER_METADATA, if available.
	Closes #503343.

2008-08-23  Gustavo J. A. M. Carneiro  <gjc@inescporto.pt>

	* evolution/wscript:
	* gnomeapplet/wscript:
	* gnomedesktop/wscript:
	* gnomekeyring/wscript:
	* gnomeprint/wscript:
	* gtksourceview/wscript:
	* mediaprofiles/wscript:
	* metacity/wscript:
	* nautilusburn/wscript:
	* rsvg/wscript:
	* totem/wscript:
	* wnck/wscript:
	* wscript:
	Bug 548535 – pygtk-codegen-2.0 -> pygobject-codegen-2.0 (WAF part).

=== 2.23.0 ===
2008-06-15  Gustavo J. A. M. Carneiro  <gjc@gnome.org>

	* NEWS: Update.

2008-05-31  Gustavo J. A. M. Carneiro  <gjc@inescporto.pt>

	* evolution/wscript:
	* gnomeapplet/wscript:
	* gnomedesktop/wscript:
	* gnomekeyring/wscript:
	* gnomeprint/wscript:
	* gtksourceview/wscript: